# nucleonpy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_decay.py  plot_demo.py
scripts/: fetch_iaea.py
src/: demo.py  plot_demo.py  uso_classe.py
src/nucleonpy/: __init__.py  calculus.py  core.py  data.py  export.py  isotopes.json  isotopes_metadata.json  viz.py
src/scripts/: fetch_iaea.py
tests/: test_calculus.py  test_core.py  test_data.py  test_export.py  test_nucleonpy.py  test_public_api.py  test_viz.py
