[tool.poetry]
name = "nucleonpy"
version = "0.1.0"
description = "Pacote Python para análise de espectrometria e cálculo de decaimento nuclear."
authors = ["Priscila Floriano <priscilabflorian@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.0"
scipy = "^1.12.0"
matplotlib = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"