[tool.poetry]
name = "nucleonpy"
version = "0.1.0"
description = "Biblioteca de física nuclear para cálculo de decaimento"
authors = ["Priscila Floriano <priscilabflorian@icloud.com>"]
readme = "README.md"
repository = "https://github.com/prifloriano/nucleonpy"
packages = [{include = "nucleonpy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.14"
requests = "^2.31.0"
matplotlib = "^3.9.0"
numpy = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"